Fix text sizing on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -22,15 +22,17 @@
 }
 
 .word {
-    font-size: 3em;
+    font-size: min(3em, 8vw);
     color: white;
     font-family: sans-serif;
+    text-align: center;
 }
 
 .word-container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 .word-separator {
